--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="game">
     </div>
     <div id="footer">
-      By Joe Pasquantonio
+      By psqnt
     </div>
     <script src="js/main.js"></script>
   </body>
