add how to play menu

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <button id="level-select-button"class="bg-blue-500 text-white w-full my-2 py-2 rounded-full">Level Select</button>
         </div>
         <div>
+            <button id="how-button"class="bg-blue-500 text-white w-full my-2 py-2 rounded-full">How To Play</button>
+        </div>
+        <div>
             <button id="options-button"class="bg-blue-500 text-white w-full my-2 py-2 rounded-full">Options</button>
         </div>
         <div>
@@ -84,6 +87,18 @@
         <p class="text-sm text-gray-700 mb-4">TO DO</p>
         <div>
             <button id="options-menu-button"class="bg-blue-500 text-white w-full py-2 rounded-full">Back to Menu</button>
+        </div>
+    </div> 
+</div>
+
+<div id="how-modal" class="fixed inset-0 flex items-center justify-center hidden">
+    <div class="bg-white max-w-md w-full p-4 text-center">
+        <h1 class="text-4xl font-bold leading-none">How To Play</h1>
+        <p class="text-sm text-gray-700 mb-4">WASD - to move</p>
+        <p class="text-sm text-gray-700 mb-4">Collect the yellow circle to move to the next level</p>
+        <p class="text-sm text-gray-700 mb-4">In Survival Mode - click mouse to shoot projectiles - Collect stationary circles for more points</p>
+        <div>
+            <button id="how-menu-button"class="bg-blue-500 text-white w-full py-2 rounded-full">Back to Menu</button>
         </div>
     </div> 
 </div>
