--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     }
 </style>
 <div class="fixed text-white text-sm ml-2">
+    <span>Level: </span>
+    <span id="levelNumber" >1</span>
+    <span>Lives: </span>
+    <span id="lives" >0</span>
     <span>Score: </span>
     <span id="score" >0</span>
 </div>
@@ -84,9 +88,12 @@
 <div id="options-modal" class="fixed inset-0 flex items-center justify-center hidden">
     <div class="bg-white max-w-md w-full p-4 text-center">
         <h1 class="text-4xl font-bold leading-none">Options</h1>
-        <p class="text-sm text-gray-700 mb-4">TO DO</p>
         <div>
-            <button id="options-menu-button"class="bg-blue-500 text-white w-full py-2 rounded-full">Back to Menu</button>
+            <span id="music-text"> Music On</span>
+            <button id="options-music-button"class="bg-blue-500 text-white w-full my-2 py-2 rounded-full">Toggle Music</button>
+        </div>
+        <div>
+            <button id="options-menu-button"class="bg-blue-500 text-white w-full my-2 py-2 rounded-full">Back to Menu</button>
         </div>
     </div> 
 </div>
