--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Husband Helper</title>
+  <title>Chronos</title>
 
   <base href="/">
 
@@ -24,6 +24,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.473696579785f0a9.js" type="module"></script><script src="polyfills.53dd1ba240d556a9.js" type="module"></script><script src="main.09963fd8074a8165.js" type="module"></script></body>
+<script src="runtime.16b90fcb2523dfee.js" type="module"></script><script src="polyfills.53dd1ba240d556a9.js" type="module"></script><script src="main.12d5d889db4b6ee1.js" type="module"></script></body>
 
 </html>
